# data-job-pipeline

./: .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
src/: create_bigquery_tables.py  gcs_to_bigquery.py  load_final_bigquery_tables.py  request_google_jobs.py  split_gcs_files.py
src/etl/: engineer.py  load.py  persist.py  process.py  request.py
src/utils/: config.py  data_models.py
