[tool.poetry]
name = "data-job-pipeline"
version = "0.1.0"
description = ""
authors = ["Marc-Philipp Esser"]

[tool.poetry.dependencies]
python = "^3.9"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
joblib = "^1.2.0"
hydra-core = "^1.3.2"
prefect-gcp = "^0.3.0"
google-cloud-bigquery = "^3.7.0"
google-cloud-bigquery-storage = "^2.19.0"
google-cloud-storage = "^2.7.0"
gcsfs = "^2023.3.0"
pandas-gbq = "^0.19.1"
db-dtypes = "^1.1.1"
gensim = "^4.3.1"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
